<resources>
    <string name="app_name">NLife</string>


    <string-array name="days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="fiveADay">It is recomended that a person consumes around 450 grams of fruits and/or vegetables a day. Bellow we tell you how much you have consumed today, and how much more you need to consume in order to stay healthy.</string>


    <string-array name="nutrients_list">
        <item>Protein</item>
        <item>Total lipid (fat)</item>
        <item>Carbohydrate</item>
        <item>Glucose</item>
        <item>Calcium</item>
        <item>Iron</item>
        <item>Magnesium</item>
        <item>Zinc</item>
        <item>Vitamin C</item>
        <item>Thiamin</item>
        <item>Riboflavin</item>
        <item>Niacin</item>
        <item>Vitamin B6</item>
        <item>Vitamin B12</item>
        <item>Vitamin A</item>
        <item>Vitamin D</item>
        <item>Vitamin E</item>
    </string-array>

    <string name="nutrient_intake">Nutrient: %1$s\nRecommended value: %2$.3f\nYour intake: %3$.3f</string>

    <string-array name="categories_array">
        <item>Choose category...</item>
        <item>American Indian/Alaska Native Foods</item>
        <item>Baby Foods</item>
        <item>Baked Products</item>
        <item>Beef Products</item>
        <item>Beverages</item>
        <item>Breakfast Cereals</item>
        <item>Cereal Grains and Pasta</item>
        <item>Dairy and Egg Products</item>
        <item>Fast Foods</item>
        <item>Fats and Oils</item>
        <item>Finfish and Shellfish Products</item>
        <item>Fruits and Fruit Juices</item>
        <item>Lamb, Veal, and Game Products</item>
        <item>Legumes and Legume Products</item>
        <item>Meals, Entrees, and Side Dishes</item>
        <item>Nut and Seed Products</item>
        <item>Pork Products</item>
        <item>Poultry Products</item>
        <item>Restaurant Foods</item>
        <item>Sausages and Luncheon Meats</item>
        <item>Snacks</item>
        <item>Soups, Sauces, and Gravies</item>
        <item>Spices and Herbs</item>
        <item>Sweets</item>
        <item>Vegetables and Vegetable Products</item>
        <item>Branded Food Products Database</item>

    </string-array>

    <string name="btnDaily">Analyze daily intake</string>
    <string name="btnWeekly">Analyze weekly intake</string>


    <string name="griditem">GridItem</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="gridSearch">Search</string>
    <string name="gridDaily">Daily intake</string>
    <string name="gridFive">5 a day</string>
    <string name="gridHistory">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pref_age_summary">Enter your age</string>
    <string name="pref_age_title">Age</string>
    <string name="pref_age_key">pref_age</string>
    <string name="pref_age_defaultValue">21</string>
    <string-array name="pref_gender_titles">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="pref_gender_values">
        <item>female</item>
        <item>male</item>
    </string-array>
    <string name="pref_gender_key">pref_gender</string>
    <string name="pref_gender_title">Gender</string>
    <string name="pref_gender_defaultValue">female</string>
    <string name="pref_gender_summary">Select your gender</string>
    <string name="pref_pr_key">pref_pr</string>
    <string name="pref_pr_title">Pregnant</string>
    <string name="pref_pr_summary">Pregnancy status (female only)</string>
    <string name="pref_pr_defaultValue">false</string>

    <string name="male">male</string>
    <string name="female">female</string>
    <string name="regex">^\\d+$</string>

</resources>
